<resources>

    <!--Arrays-->
    <array name="defaultItem">
        <item>-- Choose --</item>
    </array>
    <array name="genderListItems">
        <item>Female</item>
        <item>Male</item>
    </array>
    <array name="orderTypeItems">
        <item>Shirt</item>
        <item>T-shirt</item>
        <item>Tunic</item>
        <item>Pants</item>
    </array>
    <array name="statusItems">
        <item>Pending</item>
        <item>Complete</item>
        <item>Delivered</item>
    </array>

    <!--Strings-->
    <string name="app_name">TailorDget</string>
    <string name="home_label">Home</string>
    <string name="profiles_label">Profiles</string>
    <string name="task_label">Task</string>
    <string name="label_settings">Settings</string>
    <string name="all_profiles_list">All Profiles List</string>
    <string name="favorites_profiles_list">Favorites Profiles List</string>
    <string name="all_profile_title_pane">All</string>
    <string name="favorite_profile_title_pane">Favorites</string>
    <string name="new_profile_view_title">New Profile</string>
    <string name="label_profile">Profile</string>
    <string name="name_label">Name</string>
    <string name="sex_label">Sex</string>
    <string name="profile_name_label">Profile Name</string>
    <string name="item_share">Share</string>
    <string name="item_delete">Delete</string>
    <string name="cab_selected">%1$d selected</string>
    <string name="favorite">Favorite</string>
    <string name="measurements_title">Measurements</string>
    <string name="oversee_title">Oversee</string>
    <string name="label_neck">Neck</string>
    <string name="label_chest">Chest</string>
    <string name="label_waist">Waist</string>
    <string name="label_hip">Hip</string>
    <string name="label_seat">Seat</string>
    <string name="label_shirt_length">Shirt Length</string>
    <string name="label_half_shoulder">Half Shoulder</string>
    <string name="label_shoulder_width">Shoulder Width</string>
    <string name="label_arm_length">Arm Length</string>
    <string name="label_biceps">Biceps</string>
    <string name="label_wrist">Wrist</string>
    <string name="label_inseam">Inseam</string>
    <string name="label_coat_sleeve_length">Coat Sleeve Length</string>
    <string name="label_jacket_length">Jacket Length</string>
    <string name="label_thigh">Thigh</string>
    <string name="label_above_knee">Above Knee</string>
    <string name="label_below_knee">Below Knee</string>
    <string name="label_calf">Calf</string>
    <string name="label_ankle">Ankle</string>
    <string name="label_crotch_to_knee">Crotch To Knee</string>
    <string name="label_knee_to_calf">Knee To Calf</string>
    <string name="label_calf_to_ankle">Calf To Ankle</string>
    <string name="label_waist_to_ankle">Waist To Ankle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_bottom_nav">testBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_label">Phone</string>
    <string name="personal_label">Personal</string>
    <string name="add_favorite_label">Add Favorite</string>
    <string name="added_to_favorite_message">Added to Favorites</string>
    <string name="remove_label">Remove</string>
    <string name="item_edit">Edit</string>
    <string name="new_order_view_title">New Order</string>
    <string name="label_informations">Informations</string>
    <string name="image_label">Image(s)</string>
    <string name="type_label">Type</string>
    <string name="label_order">Order</string>
    <string name="label_orders">Orders</string>
    <string name="label_price">Price</string>
    <string name="label_details">Details</string>
    <string name="label_status">Status</string>
</resources>
