<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.projects.tailordget.activities.NewOrder">

    <android.support.v7.widget.Toolbar
        android:id="@+id/newOrderToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_order_view_title"
        app:titleTextColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <!-- Card Personal -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:contentPaddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/label_informations"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="32dp" />

                        <EditText
                            android:id="@+id/orderNameEditText"
                            style="@style/Widget.AppCompat.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="50dp"
                            android:gravity="start"
                            android:hint="@string/name_label" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_label"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <Spinner
                            android:id="@+id/orderTypeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="50dp"
                            android:gravity="start"
                            android:hint="@string/type_label" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_profile_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_profile"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <Spinner
                            android:id="@+id/profileOrderingSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="50dp"
                            android:gravity="start"
                            android:prompt="@string/profile_name_label"
                            android:hint="@string/label_profile" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_dollar_gray"  />

                        <EditText
                            android:id="@+id/priceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="50dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="start"
                            android:hint="@string/label_price"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_info_gray" />

                        <EditText
                            android:id="@+id/orderDetailsEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_status"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <Spinner
                            android:id="@+id/orderStatusSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="50dp"
                            android:gravity="start"
                            android:hint="@string/label_status" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Card Measurements -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:contentPaddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/image_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="170dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_add_image_gray" />
                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>